# wasmgpu

./: Cargo.toml  LICENSE.txt  index.html  responsive.html
.cargo/: config.toml
src/: evaluator.wgsl  gen_index.wgsl  gen_vertex.wgsl  lib.rs  mesh_generator.rs  meshgrid.rs  shader.wgsl
