[package]
name = "wasmgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { version = "27", features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement"] }
log = "0.4"
console_log = "1"

[lib]
crate-type = ["cdylib", "rlib"]
