[package]
name = "wasmgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { version = "27", default-features = false, features = ["webgpu", "wgsl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement"] }
log = "0.4"
console_log = "1"
bytemuck = "1.24"
futures = "0.3"
glam = { version = "0.30", features = ["bytemuck"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
readback = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
